--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,7 @@
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "start" : "npm run dev"
+    "start" : "vite --host"
   },
   "dependencies": {
     "axios": "^1.7.2",
